added fortify configuration changes